# 2048-PPO

./: .gitignore  README.md  claude.md  deps.txt  game.py  logger.py  main.py  play.py  play_cli.py  pyproject.toml  train.py  viz_server.py  web.py
docs/: index.html
docs/css/: styles.css
docs/data/: .gitkeep  best_game.json  best_model.pt  model.onnx  model_config.json
docs/js/: game.js  model.js  ui.js
viz/: index.html
