[project]
name = "rl-fun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "certifi==2025.11.12",
    "click==8.3.1",
    "decorator==5.2.1",
    "docutils==0.22.3",
    "executing==2.2.1",
    "fastapi==0.124.4",
    "filelock==3.20.1",
    "flask==3.1.2",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "ifaddr==0.2.0",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markdown2==2.5.4",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "networkx==3.6.1",
    "nicegui==3.4.1",
    "numpy==2.3.5",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.8.90",
    "orjson==3.11.5",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "python-dotenv==1.2.1",
    "python-engineio==4.12.3",
    "python-multipart==0.0.20",
    "python-socketio==5.15.1",
    "pyyaml==6.0.3",
    "rich==14.2.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "simple-websocket==1.1.0",
    "stack-data==0.6.3",
    "starlette==0.50.0",
    "sympy==1.14.0",
    "torch==2.9.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triton==3.5.1",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.38.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
    "werkzeug==3.1.4",
    "wsproto==1.3.2",
    "yarl==1.22.0",
]
